<resources>
    <string name="app_name">VsaApp</string>

    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="vp">Vertretungsplan</string>
    <string name="sp">Stundenplan</string>
    <string name="teacher">Lehrer</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="action_home">Home</string>
    <string name="loginDialog">Login Dialog</string>
    <string name="loginDialog_passwordHint">Passwort</string>
    <string name="loginDialog_usernameHint">Benutzername</string>
    <string name="OK">OK</string>
    <string name="loginDialog_status">Zugangsdaten eingeben:</string>
    <string name="loginDialog_statusFailed">Benutzername oder Passwort ist falsch</string>
    <string name="preferenceCategory_userInfo">Persönliche Daten</string>
    <string name="preferenceTitle_classname">Klasse</string>
    <string name="vpInfoDialogTitle">Vertretung</string>
    <string name="vpStand">Aktualisiere…</string>
    <string name="preferenceCategory_appPref">Appeinstellungen</string>
    <string name="preferenceTitle_showVpOnlyForYou">Im Vertretungsplan nur deine Kurse anzeigen</string>
    <string name="preferenceSummary_showVpOnlyForYou">Im Vertretungsplan werden nur die von dir ausgewählten Kurse
        angezeigt
    </string>
    <string name="login_success">Erfolgreich angemeldet</string>
    <string name="no_connection">Verbindung zum Server fehlgeschagen</string>
    <string name="need_connection">Beim ersten mal starten wird immer eine Internetverbindung benötigt!</string>
    <string name="cafetoria_need_connection">Beim ersten mal laden wird immer eine Internetverbindung benötigt!</string>
    <string name="wait_for_connection">Warte auf eine Internetverbindung…</string>
    <string name="no_class">Keine Klasse gesetzt</string>
    <string name="choose_grade">Klasse auswählen</string>
    <string name="search_teacher">Lehrer mit Namen, Kürzel oder Fach suchen</string>
    <string name="for_s_the_s_from_s" formatted="false">Für %s den %s\n (Stand: %s, %s Uhr)</string>
    <string name="mister">Herr</string>
    <string name="mister_gen">Herrn</string>
    <string name="misses">Frau</string>
    <string name="s_in_room_s" formatted="false">%s in Raum %s</string>
    <string name="dot_unit">. Stunde</string>
    <string name="with_s_s_in_room_s" formatted="false">Mit %s %s in Raum %s</string>
    <string name="now_with_s_s" formatted="false">Jetzt mit %s: %s</string>
    <string name="now_s" formatted="false">Jetzt %s</string>
    <string name="in_room_s" formatted="false">\ in Raum %s</string>
    <string name="with_s" formatted="false">mit %s</string>
    <string name="no_unit_in_this_lesson">-</string>
    <string name="lesson_pause">Mittagspause</string>
    <string name="lesson_free">Freistunde</string>
    <string name="lesson_tandem">Tandem</string>
    <string name="lesson_french">Französisch</string>
    <string name="lesson_latin">Latein</string>
    <string name="logout">Abmelden</string>
    <string name="logout_summary">Von der VsaApp abmelden</string>
    <string name="really_logout">Willst du dich wirklich abmelden?</string>
    <string name="no_username_set">Kein Nutzername gesetzt</string>
    <string name="no_password_set">Kein Passwort gesetzt</string>
    <string name="cafetoria">Cafetoria</string>
    <string name="cafatoriaDialog_passwordHint">PIN</string>
    <string name="cafetoriaDialog_idHint">ID</string>
    <string name="cafetoriaDialog_status">Zugangsdaten eingeben:</string>
    <string name="cafetoriaDialog">Cafetoria Dialog</string>
    <string name="cafetoriaDialog_statusFailed">ID oder PIN ist falsch</string>
    <string name="no_id_set">Keine ID gesetzt</string>
    <string name="no_pin_set">Keine PIN gesetzt</string>
    <string name="menu_dates">Kalender</string>
    <string name="dates_calendar">Kalender</string>
    <string name="dates_list">Liste</string>
    <string name="clock" formatted="false">%d - %d Uhr</string>
    <string name="whole_day">Ganztägig</string>
    <string name="to_day" formatted="false">bis %d.%d.%d</string>
    <string name="web">Web</string>
    <string name="scan">Scannen</string>
    <string name="scan_instruction">Öffne https://vsa.lohl1kohl.de in einem Browser und scanne den QR-Code</string>
    <string name="ags">AGs</string>
    <string name="ag_room" formatted="false">In Raum: %s</string>
    <string name="ag_grade" formatted="false">Für Klassen: %s</string>
    <string name="write_email">Eine Email schreiben</string>
    <string name="shortName">Kürzel:</string>
    <string name="subjects">Fächer:</string>
    <string name="no_teacher_found">Es konnte kein Lehrer gefunden werden</string>
    <string name="no_document_found">Es konnte kein Dokument gefunden werden</string>
    <string name="search_document">Dokument mit Name oder Gruppe suchen</string>
    <string name="documents">Dokumente</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="in_school">In der Schule</string>
    <string name="phone_muted">Handy stumm</string>
    <string name="phone_on">Handy laut</string>
    <string name="media_muted">Medienton aus</string>
    <string name="media_on">Medienton an</string>
    <string name="preferenceSummary_showVpinSp">Nutzbar mit der obigen Einstellung</string>
    <string name="preferenceTitle_showVpinSp">Vertretungsplan im Stundenplan anzeigen</string>
    <string name="preferenceSummary_mutePhone">Dein Handy wird während der Unterrichtszeit stummgestellt</string>
    <string name="preferenceTitle_mutePhone">Handy stummstellen</string>
    <string name="changeGradeOnlyWithNetworkConnection">Die Klasse kann nur mit einer aktiven Internetverbindung
        geändert werden
    </string>
    <string name="loadingScreenPercentValue">0 %</string>
    <string name="back">Zurück</string>
    <string name="eventsDialog">Events Dialog</string>
    <string name="no_changes">Keine Änderungen</string>
    <string name="preferenceSummary_lockSubjects">Im Stundenplan können keine Fächer mehr ausgewählt werden</string>
    <string name="preferenceTitle_lockSubjects">Keine Fächerwahl im Stundenplan</string>
    <string name="preferenceSummary_clear_cache">Aktualisierung der Daten wird erzwungen</string>
    <string name="preferenceTitle_clear_cache">Netzwerk-Cache löschen</string>
    <string name="cafetoriaExtra">Extras</string>
    <string name="cafetoriaMenus">Menüs</string>
    <string name="cafetoriaSnacks">Snacks</string>
    <string name="cafetoriaTime" formatted="false">%s - %s Uhr</string>
    <string name="cafetoriaStartTime" formatted="false">%s Uhr</string>
    <string name="cafetoriaSaldo">Saldo: %1$,.2f€</string>
    <string name="convertingFailed" formatted="false">Fehler beim konvertieren vom %s</string>
    <string name="calendarExport">+</string>
    <string name="pinboard">Pinnwand</string>
    <string name="following">Abonniert</string>
    <string name="follow">Abonnieren</string>
    <string name="dates_new_event_title">Titel</string>
    <string name="dates_new_event_info">Info</string>
    <string name="dates_new_event_date">Datum</string>
    <string name="dates_new_event_time">Zeit</string>
    <string name="dates_new_event_whole_day">Ganztägig</string>
    <string name="dates_new_event_dialog_title">Neuer Termin</string>
    <string name="dates_edit_event_dialog_title">Termin bearbeiten</string>
    <string name="dates_edit_event_dialog_export">Termin exportieren:</string>
    <string name="holidays_category">Ferien</string>
    <string name="other_category">Andere</string>
    <string name="holiday_category">Feiertag</string>
    <string name="edit_categories">Kategorien verwalten</string>
    <string name="pick_color">Farbe auswählen</string>
    <string name="default_categories">#Ferien::false::61:224:245#Andere::true::91:198:56:#Feiertag::false::96:73:43
    </string>
    <string name="add">+</string>
    <string name="add_category">Kategorie hinzufügen:</string>
    <string name="del_category">Kategorie löschen:</string>
    <string name="in_school_category">Schulfrei:</string>
    <string name="del_event">Event löschen:</string>
    <string name="name">Name:</string>
    <string name="color">Farbe:</string>
    <string name="category_select">Kategorie zum bearbeiten auswählen:</string>
    <string name="event_time" formatted="false">%02d:%02d Uhr</string>
    <string name="no_title">Es muss ein Titel angegeben sein!</string>
    <string name="name_of_day" formatted="false">%s, den %02d.%02d.%04d</string>
    <string name="exam">Klausur</string>
    <string name="exam_info">%s %s mit Aufsicht von %s</string>
    <string name="make_up_exam">Nachschreiber</string>
    <string name="category_exists">Der Name ist schon vorhanden!</string>

    <string-array name="nameOfGrades">
        <item>5a</item>
        <item>5b</item>
        <item>5c</item>
        <item>6a</item>
        <item>6b</item>
        <item>6c</item>
        <item>7a</item>
        <item>7b</item>
        <item>7c</item>
        <item>8a</item>
        <item>8b</item>
        <item>8c</item>
        <item>9a</item>
        <item>9b</item>
        <item>9c</item>
        <item>EF</item>
        <item>Q1</item>
        <item>Q2</item>
        <item>13</item>
    </string-array>
    <string-array name="nameOfSubjects">
        <item>CH:Chemie</item>
        <item>PH:Physik</item>
        <item>MI:Mint</item>
        <item>DB:NW</item>
        <item>DP:PoWi</item>
        <item>PO:PoWi</item>
        <item>IF:Info</item>
        <item>S8:Spanisch</item>
        <item>S1:Spanisch</item>
        <item>MU:Musik</item>
        <item>SP:Sport</item>
        <item>F6:Französisch</item>
        <item>L6:Latein</item>
        <item>ER:E. Reli</item>
        <item>KR:K. Reli</item>
        <item>D:Deutsch</item>
        <item>E5:Englisch</item>
        <item>M:Mathe</item>
        <item>PK:Politik</item>
        <item>BI:Bio</item>
        <item>UC:U. Chor</item>
        <item>EK:Erdkunde</item>
        <item>KU:Kunst</item>
        <item>KW:Kunst</item>
        <item>SW:SoWi</item>
        <item>PL:Philosophie</item>
        <item>GE:Geschichte</item>
        <item>VM:Vertiefung Mathe</item>
        <item>VD:Vertiefung Deutsch</item>
        <item>VE:Vertiefung Englisch</item>
        <item>FF:Französisch Förder</item>
        <item>LF:Latein Förder</item>
        <item>PJ:Projektkurs</item>
    </string-array>

    <string-array name="weekdays">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Samstag</item>
        <item>Sonntag</item>
    </string-array>

    <string-array name="monthNames">
        <item>Januar</item>
        <item>Februar</item>
        <item>März</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Dezember</item>
    </string-array>
</resources>
