<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:ems="10"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/lbl_loginFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/loginDialog_status" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/loginDialog_usernameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_passwort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/loginDialog_passwordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_loginGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/choose_grade" />

    <Button
        android:id="@+id/btn_loginOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/OK" />

</LinearLayout>